--- a/ballrotate/src/main/res/values-zh/strings.xml
+++ b/ballrotate/src/main/res/values-zh/strings.xml
@@ -4,4 +4,11 @@
     <string name="dragable">拖动旋转</string>
     <string name="automatic_rotation">自动旋转</string>
     <string name="ball_rotate_settings">3D旋转球-设置</string>
+    <string name="basic">基本</string>
+    <string name="background">背景</string>
+    <string name="rd_default">默认墙面</string>
+    <string name="rd_drop">水滴形状</string>
+    <string name="rd_bone">离心花纹</string>
+    <string name="rd_wave">浪花波纹</string>
+    <string name="scale">缩放</string>
 </resources>
