--- a/ballrotate/src/main/res/values-zh/strings.xml
+++ b/ballrotate/src/main/res/values-zh/strings.xml
@@ -11,4 +11,9 @@
     <string name="rd_bone">离心花纹</string>
     <string name="rd_wave">浪花波纹</string>
     <string name="scale">缩放</string>
+    <string name="tip_msg">msg</string>
+    <string name="tip_title">title</string>
+    <string name="btn_sure">Sure</string>
+    <string name="btn_preview">预览</string>
+    <string name="btn_choose">选择 >></string>
 </resources>
