添加halloween的项目

--- a/ballrotate/src/main/res/values-zh/strings.xml
+++ b/ballrotate/src/main/res/values-zh/strings.xml
@@ -16,4 +16,7 @@
     <string name="btn_sure">Sure</string>
     <string name="btn_preview">预览</string>
     <string name="btn_choose">选择 >></string>
+    <string name="ball_type">球</string>
+    <string name="football">足球</string>
+    <string name="basketball">篮球</string>
 </resources>
