3d球v1.4, 万圣节第一版

--- a/ballrotate/src/main/res/values-zh/strings.xml
+++ b/ballrotate/src/main/res/values-zh/strings.xml
@@ -18,5 +18,6 @@
     <string name="btn_choose">选择 >></string>
     <string name="ball_type">球</string>
     <string name="football">足球</string>
+    <string name="volleyball">排球</string>
     <string name="basketball">篮球</string>
 </resources>
