--- a/halloween/src/main/res/values-zh/strings.xml
+++ b/halloween/src/main/res/values-zh/strings.xml
@@ -3,13 +3,12 @@
     <string name="app_name_wallpaper">万圣节 3D</string>
     <string name="dragable">拖动旋转</string>
     <string name="automatic_rotation">自动旋转</string>
-    <string name="ball_rotate_settings">3D旋转球-设置</string>
+    <string name="ball_rotate_settings">万圣节 3D-设置</string>
     <string name="basic">基本</string>
     <string name="background">背景</string>
-    <string name="rd_default">默认墙面</string>
-    <string name="rd_drop">水滴形状</string>
-    <string name="rd_bone">离心花纹</string>
-    <string name="rd_wave">浪花波纹</string>
+    <string name="rd_default">快乐万圣节</string>
+    <string name="rd_yellow_light">黄光背景</string>
+    <string name="rd_black_eye">黑色眼睛</string>
     <string name="scale">缩放</string>
     <string name="tip_msg">msg</string>
     <string name="tip_title">title</string>
